# REVERSI

./: CMakeLists.txt  GitLogHistory
src/: BasicRules.cpp  BasicRules.h  Board.cpp  Board.h  ComputerPlayer.cpp  ComputerPlayer.h  ConsoleDisplayer.cpp  ConsoleDisplayer.h  ConsolePlayer.cpp  ConsolePlayer.h  Game.cpp  Game.h  IDisplayer.h  IPlayer.cpp  IPlayer.h  IRules.h  LocalNetworkPlayer.cpp  LocalNetworkPlayer.h  PlayerTypes.cpp  PlayerTypes.h  Point.cpp  Point.h  RemoteNetworkPlayer.cpp  RemoteNetworkPlayer.h  Reversy.cpp  Socket.cpp  Socket.h  makefile  settings1
tests/: BasicRulesTest.h  BoardTest.h  ComputerPlayerTest.h  JustATest.cpp  SomeTests.cpp  gtest_main.cpp
